--- a/website/static/configuracion/css/estilos.css
+++ b/website/static/configuracion/css/estilos.css
@@ -158,6 +158,35 @@ input:-moz-placeholder { /* Firefox 18- */
   font-size: 16px;
 }
 
+#delete-h2{
+	text-align: center;
+	font-size: 40px;
+	margin: 50px 0;
+	color: #fff;
+}
+
+.container-input{
+	display: flex;
+	justify-content: center;
+}
+
+#button{
+	background: #00ADB5;
+    width: 100px;
+    border: none;
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+	width: 180px;
+	padding: 15px 0;
+}
+
+img{
+	width: 150px;
+	margin-top: 10vh;
+}
+
+
 /* Responsive */
 @media screen and (max-width: 1199px) {
 	.form-v9-content {
