Conexion a una base de datos remota y arreglando caracteres utf-8

--- a/website/template/asistenciaFicha.html
+++ b/website/template/asistenciaFicha.html
@@ -1,7 +1,9 @@
 
             {% load static %}
             <html>
-                <head><title>Asistencia</title>
+                <head>
+                    <meta charset="UTF-8">
+                    <title>Asistencia</title>
                     <link rel="stylesheet" type="text/css" href="{% static 'asistencia/css/tables.css'%}"/>
                     <link rel="stylesheet" href="{% static 'assets/font-awesome/css/font-awesome.css' %}"/>
                 </head>
@@ -27,52 +29,17 @@
   <tbody>
     <tr>
       <th>0</th>
-      <td>DavidAndresNorenaGiraldo</td>
-      <td>No vino</td>
+      <td>DavidLondoño</td>
+      <td>Presente</td>
     </tr>
     <tr>
       <th>1</th>
-      <td>LucasArboledaBedoya</td>
-      <td>No vino</td>
+      <td>CarlosRiaño</td>
+      <td>Presente</td>
     </tr>
     <tr>
       <th>2</th>
-      <td>SebastianSalasCuartas</td>
-      <td>No vino</td>
-    </tr>
-    <tr>
-      <th>3</th>
-      <td>JuanPabloRojasArismendy</td>
-      <td>No vino</td>
-    </tr>
-    <tr>
-      <th>4</th>
-      <td>SimonLopezPelaez</td>
-      <td>No vino</td>
-    </tr>
-    <tr>
-      <th>5</th>
-      <td>MiguelAngelCastillaBallestas</td>
-      <td>No vino</td>
-    </tr>
-    <tr>
-      <th>6</th>
-      <td>JuanDavidRiveraCasallas</td>
-      <td>No vino</td>
-    </tr>
-    <tr>
-      <th>7</th>
-      <td>EmmanuelMunozZapata</td>
-      <td>No vino</td>
-    </tr>
-    <tr>
-      <th>8</th>
-      <td>JuanDavidRuizAlzate</td>
-      <td>No vino</td>
-    </tr>
-    <tr>
-      <th>9</th>
-      <td>OrlandoRobertoVilladiegoOtero</td>
+      <td>AndrésPerea</td>
       <td>No vino</td>
     </tr>
   </tbody>
