Pagina web con base de datos remota

--- a/website/template/asistenciaFicha.html
+++ b/website/template/asistenciaFicha.html
@@ -29,18 +29,28 @@
   <tbody>
     <tr>
       <th>0</th>
-      <td>DavidLondoño</td>
+      <td>LucasArboledaBedoya</td>
       <td>Presente</td>
     </tr>
     <tr>
       <th>1</th>
-      <td>CarlosRiaño</td>
+      <td>DavidAndresNoreñaGiraldo</td>
       <td>Presente</td>
     </tr>
     <tr>
       <th>2</th>
-      <td>AndrésPerea</td>
-      <td>No vino</td>
+      <td>SebastianSalasCuartas</td>
+      <td>Presente</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>DanielGomezLeon</td>
+      <td>Presente</td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td>SamuelYepesOsorio</td>
+      <td>Presente</td>
     </tr>
   </tbody>
 </table>
