--- a/website/template/asistenciaFicha.html
+++ b/website/template/asistenciaFicha.html
@@ -30,27 +30,32 @@
     <tr>
       <th>0</th>
       <td>LucasArboledaBedoya</td>
-      <td>Presente</td>
+      <td>No vino</td>
     </tr>
     <tr>
       <th>1</th>
       <td>DavidAndresNoreñaGiraldo</td>
-      <td>Presente</td>
+      <td>No vino</td>
     </tr>
     <tr>
       <th>2</th>
       <td>SebastianSalasCuartas</td>
-      <td>Presente</td>
+      <td>No vino</td>
     </tr>
     <tr>
       <th>3</th>
       <td>DanielGomezLeon</td>
-      <td>Presente</td>
+      <td>No vino</td>
     </tr>
     <tr>
       <th>4</th>
       <td>SamuelYepesOsorio</td>
-      <td>Presente</td>
+      <td>No vino</td>
+    </tr>
+    <tr>
+      <th>5</th>
+      <td>LeydiMoralesRubiano</td>
+      <td>No vino</td>
     </tr>
   </tbody>
 </table>
