--- a/website/template/asistenciaFicha.html
+++ b/website/template/asistenciaFicha.html
@@ -30,7 +30,7 @@
     <tr>
       <th>0</th>
       <td>DavidAndresNorenaGiraldo</td>
-      <td>No vino</td>
+      <td>Presente</td>
     </tr>
     <tr>
       <th>1</th>
@@ -40,7 +40,7 @@
     <tr>
       <th>2</th>
       <td>SebastianSalasCuartas</td>
-      <td>No vino</td>
+      <td>Presente</td>
     </tr>
     <tr>
       <th>3</th>
